--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Krishi Saathi | AI Crop Assistant</title>
+  <title>Asli Fasal | AI Crop Assistant</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">🌱 Krishi Saathi</div>
+      <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="index.html" class="active">Home</a></li>
         <li><a href="recommend/index.html">Crop Recommendation</a></li>
@@ -28,7 +28,7 @@
     <div class="hero-content">
       <h1>Empowering Farmers with AI 🌾</h1>
       <p>
-        Krishi Saathi is your AI-powered farming assistant, helping you choose
+        Asli Fasal is your AI-powered farming assistant, helping you choose
         the right crops, fertilizers, and farming practices for higher yield,
         better profits, and sustainable agriculture.
       </p>
@@ -75,7 +75,8 @@
 
   <!-- ✅ Footer -->
   <footer>
-    <p>© 2025 Krishi Saathi | Smart India Hackathon Prototype</p>
+    <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
   </footer>
 </body>
 </html>
+
