--- a/chat/index.html
+++ b/chat/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Chat Assistant | Krishi Saathi</title>
+  <title>Chat Assistant | Asli Fasal</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">🌱 Krishi Saathi</div>
+      <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -27,7 +27,7 @@
   <main class="chat-container">
     <!-- Chat Header -->
     <div class="chat-header">
-      <h2>💬 Krishi Saathi Assistant</h2>
+      <h2>💬 Asli Fasal Assistant</h2>
       <p>Ask questions about crops, fertilizers, and farming tips.</p>
     </div>
 
@@ -49,9 +49,10 @@
 
   <!-- ✅ Footer -->
   <footer>
-    <p>© 2025 Krishi Saathi | Smart India Hackathon Prototype</p>
+    <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
   </footer>
 
   <script src="script.js"></script>
 </body>
 </html>
+
