--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About Us | Krishi Saathi</title>
+  <title>About Us | Asli Fasal</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">🌱 Krishi Saathi</div>
+      <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -26,9 +26,9 @@
   <!-- ✅ About Section -->
   <section class="about-section">
     <div class="about-container">
-      <h1>About Krishi Saathi</h1>
+      <h1>About Asli Fasal</h1>
       <p>
-        Krishi Saathi is an AI-powered farming assistant developed as part of the
+        Asli Fasal is an AI-powered farming assistant developed as part of the
         Smart India Hackathon 2025. Our mission is to empower farmers with the
         right knowledge, tools, and insights so they can improve productivity,
         increase income, and practice sustainable agriculture.
@@ -36,7 +36,7 @@
       <p>
         Farmers in India face challenges like limited access to real-time
         agricultural guidance, lack of technical knowledge, language barriers,
-        and unpredictable weather and market fluctuations. Krishi Saathi
+        and unpredictable weather and market fluctuations. Asli Fasal
         addresses these challenges by providing crop recommendations, fertilizer
         guides, weather forecasts, market prices, and even a conversational chat
         assistant — all in one platform.
@@ -81,7 +81,7 @@
         <li><strong>Sustainability Features:</strong> Recommendations for crop rotation, organic fertilizers, and water-saving techniques.</li>
       </ul>
       <p>
-        Our ultimate goal is to make Krishi Saathi not just a decision-support
+        Our ultimate goal is to make Asli Fasal not just a decision-support
         system but a trusted digital companion for every Indian farmer.
       </p>
     </div>
@@ -108,7 +108,8 @@
 
   <!-- ✅ Footer -->
   <footer>
-    <p>© 2025 Krishi Saathi | Smart India Hackathon Prototype</p>
+    <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
   </footer>
 </body>
 </html>
+
