--- a/about/index.html
+++ b/about/index.html
@@ -68,7 +68,7 @@
       <h2>🚀 Our Future Vision</h2>
       <p>
         While our current prototype showcases the core functionality, our
-        long-term vision is to scale Krishi Saathi into a comprehensive
+        long-term vision is to scale Asli Fasal into a comprehensive
         platform:
       </p>
       <ul>
@@ -112,4 +112,5 @@
   </footer>
 </body>
 </html>
+
 
