--- a/weather/index.html
+++ b/weather/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather & Market Dashboard | Asli Fasal</title>
+  <title>Weather & Market Dashboard | Krishi Saathi</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">🌱 Asli Fasal</div>
+      <div class="logo">🌱 Krishi Saathi</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -38,48 +38,60 @@
   <main class="dashboard-container">
     <!-- District Selection -->
     <div class="form-card">
-      <h2>Select District</h2>
-      <div class="form-group">
-        <select id="district" required>
-          <option value="" disabled selected>-- Select District --</option>
-          <option value="Ranchi">Ranchi</option>
-          <option value="Dhanbad">Dhanbad</option>
-          <option value="Hazaribagh">Hazaribagh</option>
-          <option value="Bokaro">Bokaro</option>
-          <option value="Giridih">Giridih</option>
-        </select>
-      </div>
-      <button id="showDashboard" class="btn">Show Dashboard</button>
-    </div>
+  <h2>Select State & District</h2>
 
-    <!-- Weather Section -->
-    <section id="weatherSection" class="results-section hidden">
-      <h2>🌦️ 7-Day Weather Forecast</h2>
-      <div id="weatherCards" class="weather-cards"></div>
-    </section>
+  <!-- State Dropdown -->
+  <div class="form-group">
+    <select id="state" required>
+      <option value="" disabled selected>-- Select State --</option>
+    </select>
+  </div>
 
-    <!-- Market Section -->
-    <section id="marketSection" class="results-section hidden">
-      <h2>💰 Market Prices</h2>
-      <table class="market-table" id="marketTable">
-        <thead>
-          <tr>
-            <th>Crop</th>
-            <th>Price (₹/quintal)</th>
-            <th>Trend</th>
-          </tr>
-        </thead>
-        <tbody></tbody>
-      </table>
-    </section>
+  <!-- District Dropdown -->
+  <div class="form-group">
+    <select id="district" required>
+      <option value="" disabled selected>-- Select District --</option>
+    </select>
+  </div>
+
+  <button id="showDashboard" class="btn">Show Dashboard</button>
+</div>
+
+
+    <!-- ✅ Weather Section -->
+<section id="weatherSection" class="results-section hidden">
+  <h2>🌦️ 7-Day Weather Forecast</h2>
+  <div id="weatherCards" class="weather-cards"></div>
+</section>
+
+<!-- ✅ Market Section -->
+<section id="marketSection" class="results-section hidden">
+  <h2>💰 Market Prices</h2>
+  <p class="market-info">
+    📊 These prices represent the <strong>modal prices (₹/quintal)</strong> reported by government-approved mandis in your district.
+    Prices vary daily based on demand, supply, and quality. Use this data as a guide before selling your produce.
+  </p>
+  <table class="market-table" id="marketTable">
+    <thead>
+      <tr>
+        <th>Crop</th>
+        <th>Price (₹/quintal)</th>
+        <th>Market</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+</section>
+
   </main>
 
   <!-- ✅ Footer -->
   <footer>
-    <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
+    <p>© 2025 Krishi Saathi | Smart India Hackathon Prototype</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="indian.js"></script>
+<script src="script.js"></script>
+
 </body>
 </html>
-
