--- a/weather/index.html
+++ b/weather/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Weather & Market Dashboard | Krishi Saathi</title>
+  <title>Weather & Market Dashboard | Asli Fasal</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"/>
 </head>
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
-      <div class="logo">🌱 Krishi Saathi</div>
+      <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -87,7 +87,7 @@
 
   <!-- ✅ Footer -->
   <footer>
-    <p>© 2025 Krishi Saathi | Smart India Hackathon Prototype</p>
+    <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
   </footer>
 
   <script src="indian.js"></script>
@@ -95,3 +95,4 @@
 
 </body>
 </html>
+
