--- a/chat/index.html
+++ b/chat/index.html
@@ -11,6 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
+      <div class="menu-toggle" id="menuToggle">☰</div>
       <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
@@ -55,4 +56,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
