--- a/fertilizer/index.html
+++ b/fertilizer/index.html
@@ -12,6 +12,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">🌱 Asli Fasal</div>
+      <div class="menu-toggle" id="menuToggle">☰</div>  <!-- ✅ Added -->
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -86,4 +87,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
