--- a/fertilizer/index.html
+++ b/fertilizer/index.html
@@ -11,8 +11,8 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
+      <div class="menu-toggle" id="menuToggle">☰</div>
       <div class="logo">🌱 Asli Fasal</div>
-      <div class="menu-toggle" id="menuToggle">☰</div>  <!-- ✅ Added -->
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="../recommend/index.html">Crop Recommendation</a></li>
@@ -87,5 +87,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
