--- a/weather/index.html
+++ b/weather/index.html
@@ -11,6 +11,7 @@
   <!-- ✅ Navbar -->
   <header>
     <nav class="navbar">
+      <div class="menu-toggle" id="menuToggle">☰</div>
       <div class="logo">🌱 Asli Fasal</div>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
@@ -95,4 +96,5 @@
 
 </body>
 </html>
+
 
