--- a/about/index.html
+++ b/about/index.html
@@ -111,8 +111,17 @@
   <footer>
     <p>© 2025 Asli Fasal | Smart India Hackathon Prototype</p>
   </footer>
+  <script>
+  const menuToggle = document.getElementById("menuToggle");
+  const navLinks = document.querySelector(".nav-links");
+  menuToggle.addEventListener("click", () => {
+    navLinks.classList.toggle("active");
+  });
+</script>
+
 </body>
 </html>
+
 
 
 
