--- a/weather/index.html
+++ b/weather/index.html
@@ -74,12 +74,15 @@
   </p>
   <table class="market-table" id="marketTable">
     <thead>
-      <tr>
-        <th>Crop</th>
-        <th>Price (₹/quintal)</th>
-        <th>Market</th>
-      </tr>
-    </thead>
+  <tr>
+    <th>Crop</th>
+    <th>Modal Price (₹/quintal)</th>
+    <th>Market</th>
+    <th>Date</th>
+    <th>Min–Max Price</th>
+  </tr>
+</thead>
+
     <tbody></tbody>
   </table>
 </section>
@@ -96,5 +99,6 @@
 
 </body>
 </html>
+
 
 
