--- a/chat/index.html
+++ b/chat/index.html
@@ -45,6 +45,11 @@
       <input type="text" id="userInput" placeholder="Type your message here..." autocomplete="off"/>
       <button id="sendBtn" class="btn">Send</button>
       <button id="voiceBtn" class="btn btn-mic">🎤</button>
+      <select id="langSelect">
+  <option value="en-IN">English</option>
+  <option value="hi-IN">हिन्दी</option>
+</select>
+
     </div>
   </main>
 
@@ -56,5 +61,6 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
